RStoolbox 0.2.4
====================================
New:

* function `oneHotEncode`: splits a single rasterLayer into multiple layers (one per class)
  with one-hot encoding, i.e. pixel value = 1 for matches, pixel value = 0 for all other classes (background).

Changes: 
* all radCor() DOS methods now work for Landsat 8 OLI 

RStoolbox 0.2.2
=====================================
New:
* added `tasseledCap` coefficients for Quickbird, Spot5 and RapidEye

Changes:
* `readEE` 'Date' column is now returned as POSIXct instead of POSIXlt

Fixes:
* corrected tasseledCap coefficient for Landsat 5 TM (#40, reported by @philipperufin)


RStoolbox 0.2.1
=====================================
Fixes:
* fixed non-portable c++ headers

RStoolbox 0.2.0
=====================================
New:
* function `mesma` for spectral unmixing (#33, provided by Jakob Schwalb-Willmann)

Fixes: 
* improved NA handling and faster implementation of mlc classifier (#32, pull request by Neal Fultz)
* adapt to upcoming caret version (new constraint caret >= 6.0-79)


RStoolbox 0.1.10
=====================================
Fixes:
* fix tests for upcoming raster version

RStoolbox 0.1.9
=====================================
Fixes:
* adapt to new caret version
* fix `readEE` for new EarthExplorer formats
* corrected sign of greenness `tasseledCap` coefficient for Landsat5 TM band 1 (reported by Thomas Day)
* adapt `readMeta` and `stackMeta` to new Landsat collection 1 metadata

RStoolbox 0.1.8
=====================================
New:
* `spectralIndices()` can now apply a mask internally, e.g. to exclude cloud pixels. New arguments are: 
   `maskLayer` and `maskValue` (suggested by Andrea Hess).   
* added spectral index GNDWI   

Fixes: 
* update `readEE()` to deal with new EarthExplorer export columns (reported by Christian Bauer)

RStoolbox 0.1.7
=====================================
New: